apps/base/karakeep/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep
  namespace: karakeep
spec:
  ingressClassName: cilium
  rules:
    - host: "karakeep.apps.lab42"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: karakeep
                port:
                  number: 80
